@@ -503,6 +503,12 @@
     <dd>Replace &quot;new&quot; with &quot;::new&quot;.
     </dd>
 
+    <dt><a href="lwg-active.html#409">409</a>:
+        <em>Closing an fstream should clear the error state</em>
+    </dt>
+    <dd>Have <code>open</code> clear the error flags.
+    </dd>
+
     <dt><a href="lwg-active.html#434">434</a>:
         <em>bitset::to_string() hard to use</em>
     </dt>
