@@ -1,4 +1,4 @@
-// Copyright (C) 2000, 2001, 2003 Free Software Foundation, Inc.
+// Copyright (C) 2000, 2001, 2003, 2005 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -40,9 +40,10 @@ void test01()
   
   ifs1.open(name_01);
   VERIFY( ifs1.is_open() );
-  // fail bit still true
-  VERIFY( !(ifs1) );
-  VERIFY( ifs1.rdstate() == std::ios_base::failbit );
+
+  // As per the resolution of DR 409.
+  VERIFY( (ifs1) );
+  VERIFY( ifs1.rdstate() == std::ios_base::goodbit );
 
   ifs1.close();
 }
